--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
-aiohttp==3.6.2
+aiohttp==3.7.3
 aiohttp-jinja2==1.4.2
-discord.py==1.5.1
+discord.py==1.6.0
+fuzzywuzzy==0.18.0
+python-Levenshtein==0.12.0
 pyyaml==5.3.1
-requests==2.25.0
+requests==2.25.1
 toml==0.10.2
