--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ aiohttp-jinja2==1.4.2
 discord.py==1.6.0
 fuzzywuzzy==0.18.0
 python-Levenshtein==0.12.0
+pytz==2021.1
 pyyaml==5.3.1
 requests==2.25.1
 toml==0.10.2
